style/style.css
/* ... */
.modal-screen__cancel-btn:hover {
  background: #4b5563;
}
.modal-screen__save-btn,
.modal-screen__login-btn {
  background: #10b981;
}
.modal-screen__save-btn:hover,
.modal-screen__login-btn:hover {
  background: #059669;
}
.modal-screen__del-btn {
  background: #ef4444;
}
.modal-screen__del-btn:hover {
  background: #dc2626;
}
/* --------------------- Toast Container--------------------- **/
.toast-container {
  position: fixed;
  left: 0;
  top: 0;
  bottom: 0;
  padding: 1rem;
  min-width: 27rem;
  max-width: 45rem;
}
/* --------------------- Toast --------------------- **/
.toast {
  max-width: 100%;
  height: max-content;
  margin-top: 1rem;
  border-radius: 1rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.toast svg {
  margin: 1rem;
  width: 5rem;
  height: 5rem;
}
.toast__message {
  width: 87%;
  margin-left: 1rem;
  font-size: 1.8rem;
  text-align: justify;
}
.toast-success {
  background-color: #029946;
}
.toast-error {
  background-color: #dc2626;
}
/* --------------------- Media Query --------------------- **/
@media (max-width: 1200px) {
  .main-book {
    width: 48%;
  }
}

@media (max-width: 992px) {
  button {
    font-size: 1.8rem;
    font-weight: 600;
  }
  body {
    font-size: 1.5rem;
  }
  /* --------------------- Header --------------------- **/
  #header {
    margin-top: 1rem;
  }
  /* --------------------- Header top wrapper --------------------- **/
  .header__title {
    font-size: 3.6rem;
    font-weight: 600;
  }
  .header__caption {
    margin-top: 0;
    font-size: 1.8rem;
  }
  /* --------------------- Header Create Btn --------------------- **/
  .header__create-btn {
    width: 18rem;
    padding: 9px 18px;
  }
  /* --------------------- Main Book --------------------- **/
  .main-book {
    width: 100%;
  }
  .main-book:hover {
    transform: scale(1.01);
  }
}

@media (max-width: 768px) {
  button {
    font-size: 1.6rem;
  }
  body {
    font-size: 1.4rem;
  }
  input,
  select {
    height: 4rem;
  }
  /* --------------------- Helper class --------------------- **/
  .glass-card {
    padding: 0.99rem;
  }
  /* --------------------- Header top wrapper --------------------- **/
  .header__top-wrapper {
    max-width: 36rem;
  }
  .header__title {
    font-size: 3rem;
  }
  .header__caption {
    font-size: 1.6rem;
  }
  /* --------------------- Header center wrapper --------------------- **/
  .header__center-wrapper {
    margin-top: 2rem;
    flex-direction: column;
  }
  /* --------------------- Header Create Btn --------------------- **/
  .header__create-btn {
    margin-top: 2rem;
  }
  /* --------------------- Header Bottom Wrapper --------------------- **/
  .header__bottom-wrapper {
    margin-top: 2rem;
  }
  /* --------------------- Main Books --------------------- **/
  #main {
    margin-top: 0;
  }
  .main__header {
    width: 41.6rem;
    font-size: 2rem;
    font-weight: 500;
    margin: 0 auto;
  }
  /* --------------------- Modal Screen --------------------- **/
  .modal-screen {
    padding: 12px;
    max-width: 360px;
  }
  .modal-screen__header {
    font-size: 2.5rem;
  }
  .modal-screen__del-icon {
    width: 65px;
    height: 65px;
  }
  /* --------------------- Modal Screen Body --------------------- **/
  .modal-screen__body-text,
  .login__body-text {
    font-size: 1.6rem;
    margin-bottom: 2rem;
  }
  /* --------------------- Modal Screen Btns --------------------- **/
  .modal-screen__save-btn,
  .modal-screen__del-btn,
  .modal-screen__cancel-btn,
  .modal-screen__login-btn {
    height: 4rem;
  }
}

@media (max-width: 576px) {
  button,
  .main-book__header-text {
    font-size: 1.5rem;
  }
  /* --------------------- Helper class --------------------- **/
  .glass-card {
    padding: 0.5rem;
  }
  /* --------------------- Header Bottom Wrapper --------------------- **/
  .header__bottom-wrapper {
    flex-direction: column;
    width: 100%;
  }
  /* --------------------- Header Filter Btns --------------------- **/
  .header__filter-btn {
    width: 100%;
  }
  /* --------------------- Main --------------------- **/
  .main__header {
    width: 100%;
    font-size: 1.8rem;
  }
  .btn-login,
  .btn-signup {
    width: 100%;
  }
  /* --------------------- Toast Container--------------------- **/
  .toast-container {
    padding: 0.5rem;
  }
  .toast svg {
    margin: 0.5rem;
    width: 3.8rem;
    height: 3.8rem;
  }
  .toast__message {
    margin-left: 0.5rem;
    font-size: 1.5rem;
  }
}

